--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Intro to Scheme</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="The greatest language that ever was">
+		<meta name="author" content="Keeyon Ebrahimi">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="css/theme/default.css" id="theme">
 
 		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<link rel="stylesheet" hree="lib/css/zenburn.css">
 
 		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
@@ -43,315 +43,195 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
-					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+					<h1>Intro to Scheme</h1>
+					<h3>The Greatest Language That Ever Was</h3>
+                    <p>
+                        <small>Created by Keeyon Ebrahimi</small>
+                    <!-- <small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small> -->
 					</p>
 				</section>
 
 				<section>
-					<h2>Heads Up</h2>
-					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
-					</p>
-
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
+                    <h2>What is Scheme</h2>
+					<ul>
+						<li>Functional Programming Language</li>
+						<li>One of the two dialects of Lisp</li>
+                        <li>Created to teach Functional Programming</li>
+					</ul>
 				</section>
-
+                <section>
+                    <h2>Scheme Basics</h2>
+                    <ol>
+                        <li> Every expression is either an atom or a list
+                        <li> You evaluate a list by applying the first element of the list to the rest of the arguments.
+                        <li> Iteration (looping) in Scheme is accomplished via recursion
+                        <li> Parentheses contain expressions
+                    </ol>
+                </section>     
 				<!-- Example of nested vertical slides -->
+                <section>
+                    <section>
+                        <h2>Lists</h2>
+					    <pre><code data-trim contenteditable>
+> (list 1 2 3 4)
+(1 2 3 4)
+
+> '(1 2 3 4)
+(1 2 3 4)
+
+> (quote (1 2 3 4))
+(1 2 3 4)           
+                        </code></pre>
+                    </section> 
+                    <section>
+                        <h2>Lists can be nested</h2>
+                        <pre><code data-trim contenteditable>
+> '(1 2 (3 4) 5 6)
+(1 2 (3 4) 5 6)    
+                        </code></pre> 
+                    </section>
+                </section>
+                <section>
+                    <section>
+                      <h3>Defining Variables</h2>  
+                        <pre><code data-trim contenteditable>
+> (define x 5)
+> x
+5
+                        </code></pre> 
+                      </br>
+                      <h3>Defining Function</h2>
+                        <pre><code data-trim contenteditable>
+> (define (f x y)
+    (+ x y))
+
+> (f 5 3)
+8
+                        </code></pre> 
+
+                    </section>
+                </section> 
+                <section>
+                 <h2> Conditionals </h2>
+                    <pre><code data-trim contenteditable>
+> (define x 5)
+5
+
+> (if (= x 3) 'yes 'no)
+no
+
+> (cond ((= x 3) "x is three")
+        ((= x (- 6 1)) 5)
+        (else 'I_DUNNO))
+5 
+                    </code></pre>
+                </section>
+                <section>
+                    <section> 
+                    <h2> List Operations </h2>
+                        <ol>
+                            <li> Car 
+                            <li> Cdr
+                            <li> Cons
+                        </ol>
+                    </h2>
+                    </section>
+                    <section>
+                    <h2> Car </h2>
+                        <p> Accesses the first element of a list </p>
+                        <pre><code data-trim contenteditable>
+(car '(3 4 5 6))
+3
+                        </code></pre>
+                    </section>
+                    <section>
+                    <h2> Cdr </h2>
+                        <p> Returns the rest of the the list after Car</p>
+                        <pre><code data-trim contenteditable>
+(cdr '(1 2 3 4))
+(2 3 4) 
+                        </code></pre>
+                    </section>
+                    <section>
+                    <h2> Example using Car and Cdr </h2>
+                        <p> Here is a function that that accesses the nth element of a list</p>
+                        <pre><code data-trim contenteditable>
+> (define (nth n L)
+    (cond ((= n 1) (car L))
+        (else (nth (- n 1) (cdr L)))))
+
+> (nth 4 '(2 4 6 8 10 12))
+8
+                        </code></pre> 
+                    </section>
+                    <section>
+                    <h2> Cons </h2>
+                        <p> (cons x L)  creates a new list whose first element is x and whose 
+                            subsequent elements are the elements of the list L</p>
+                        <pre><code data-trim contenteditable>
+> (cons 3 '(4 5 6))
+(3 4 5 6) 
+                        </code></pre>
+                    </section>
+                </section>
+                <section>
+                    <h2> Append </h2>
+                    <p> Combines 2 lists into a single list </p>
+                    <pre><code data-trim contenteditable>
+(append '(1 2 3) '(4 5 6))
+(1 2 3 4 5 6)
+                    </pre></code data-trim contenteditable>
+                    <p> Now Lets write our own version </p>
+                    <pre><code data-trim contenteditable>
+(define (app L1 L2)
+  (cond ((null? L1) L2)
+        (else (cons (car L1)  (app (cdr L1) L2)))
+        ))
+> (app '(1 2 3) '(4 5 6))
+(1 2 3 4 5 6)    
+
+                    </pre></code data-trim contenteditable>
+
+                </section>
+                <section>
+                    <section>
+                        <h2> Map </h2>
+                        <p> MAP applies a function to every element of a list, returning a list of the results </p>
+                        <pre><code data-trim contenteditable>
+> (define (f x) (+ x 3))
+
+> (map f '(2 4 6 8 10))
+(5 7 9 11 13) 
+                        </pre></code data-trim contenteditable>
+                    </section>
+                    <section>
+                    <h2> Lambda </h2>
+                    <p> (lambda (inputs) (operations)) </p>
+                    <pre><code data-trim contenteditable>
+> map (lambda (x) (* x 3)) '(1 2 3 4))
+(3 6 9 12)
+                    </pre></code data-trim contenteditable>
+                    </section>
+                </section>
 				<section>
-					<section>
-						<h2>Vertical Slides</h2>
-						<p>
-							Slides can be nested inside of other slides,
-							try pressing <a href="#" class="navigate-down">down</a>.
-						</p>
-						<a href="#" class="image navigate-down">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 1</h2>
-						<p>Press down or up to navigate.</p>
-					</section>
-					<section>
-						<h2>Basement Level 2</h2>
-						<p>Cornify</p>
-						<a class="test" href="http://cornify.com">
-							<img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn">
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 3</h2>
-						<p>That's it, time to go back up.</p>
-						<a href="#/2" class="image">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);">
-						</a>
-					</section>
-				</section>
+                    <section>
+                    <h2> Let </h2> 
+                    <p> Let Introduces local Variables </p>
+                     <pre><code data-trim contenteditable>
+(define (foo)
+  (let ((x 3)
+        (y (+ 7 4)))
+    (* x y)))
+> (foo)
+33
+                     </pre></code data-trim contenteditable>
+                    <p> Also have LET* and LETREC </p>
+                    </section>
+                </section>
+                <section>
+                    <h2> Thank you Major League Hacking!! </h2>
+                </section>
 
-				<section>
-					<h2>Slides</h2>
-					<p>
-						Not a coder? No problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://slid.es" target="_blank">http://slid.es</a>.
-					</p>
-				</section>
-
-				<section>
-					<h2>Point of View</h2>
-					<p>
-						Press <strong>ESC</strong> to enter the slide overview.
-					</p>
-					<p>
-						Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Alt + click anywhere to zoom back out.
-					</p>
-				</section>
-
-				<section>
-					<h2>Works in Mobile Safari</h2>
-					<p>
-						Try it out! You can swipe through the slides and pinch your way to the overview.
-					</p>
-				</section>
-
-				<section>
-					<h2>Marvelous Unordered List</h2>
-					<ul>
-						<li>No order here</li>
-						<li>Or here</li>
-						<li>Or here</li>
-						<li>Or here</li>
-					</ul>
-				</section>
-
-				<section>
-					<h2>Fantastic Ordered List</h2>
-					<ol>
-						<li>One is smaller than...</li>
-						<li>Two is smaller than...</li>
-						<li>Three!</li>
-					</ol>
-				</section>
-
-				<section data-markdown>
-					<script type="text/template">
-						## Markdown support
-
-						For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-
-						```
-						<section data-markdown>
-						  ## Markdown support
-
-						  For those of you who like that sort of thing.
-						  Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-						</section>
-						```
-					</script>
-				</section>
-
-				<section id="transitions">
-					<h2>Transition Styles</h2>
-					<p>
-						You can select from different transitions, like: <br>
-						<a href="?transition=cube#/transitions">Cube</a> -
-						<a href="?transition=page#/transitions">Page</a> -
-						<a href="?transition=concave#/transitions">Concave</a> -
-						<a href="?transition=zoom#/transitions">Zoom</a> -
-						<a href="?transition=linear#/transitions">Linear</a> -
-						<a href="?transition=fade#/transitions">Fade</a> -
-						<a href="?transition=none#/transitions">None</a> -
-						<a href="?#/transitions">Default</a>
-					</p>
-				</section>
-
-				<section id="themes">
-					<h2>Themes</h2>
-					<p>
-						Reveal.js comes with a few themes built in: <br>
-						<a href="?#/themes">Default</a> -
-						<a href="?theme=sky#/themes">Sky</a> -
-						<a href="?theme=beige#/themes">Beige</a> -
-						<a href="?theme=simple#/themes">Simple</a> -
-						<a href="?theme=serif#/themes">Serif</a> -
-						<a href="?theme=night#/themes">Night</a> <br>
-						<a href="?theme=moon#/themes">Moon</a> -
-						<a href="?theme=solarized#/themes">Solarized</a>
-					</p>
-					<p>
-						<small>
-							* Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.
-						</small>
-					</p>
-				</section>
-
-				<section>
-					<h2>Global State</h2>
-					<p>
-						Set <code>data-state="something"</code> on a slide and <code>"something"</code>
-						will be added as a class to the document element when the slide is open. This lets you
-						apply broader style changes, like switching the background.
-					</p>
-				</section>
-
-				<section data-state="customevent">
-					<h2>Custom Events</h2>
-					<p>
-						Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
-					</p>
-					<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
-Reveal.addEventListener( 'customevent', function() {
-	console.log( '"customevent" has fired' );
-} );
-					</code></pre>
-				</section>
-
-				<section>
-					<section data-background="#007777">
-						<h2>Slide Backgrounds</h2>
-						<p>
-							Set <code>data-background="#007777"</code> on a slide to change the full page background to the given color. All CSS color formats are supported.
-						</p>
-						<a href="#" class="image navigate-down">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section data-background="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png">
-						<h2>Image Backgrounds</h2>
-						<pre><code>&lt;section data-background="image.png"&gt;</code></pre>
-					</section>
-					<section data-background="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" data-background-repeat="repeat" data-background-size="100px">
-						<h2>Repeated Image Backgrounds</h2>
-						<pre><code style="word-wrap: break-word;">&lt;section data-background="image.png" data-background-repeat="repeat" data-background-size="100px"&gt;</code></pre>
-					</section>
-				</section>
-
-				<section data-transition="linear" data-background="#4d7e65" data-background-transition="slide">
-					<h2>Background Transitions</h2>
-					<p>
-						Pass reveal.js the <code>backgroundTransition: 'slide'</code> config argument to make backgrounds slide rather than fade.
-					</p>
-				</section>
-
-				<section data-transition="linear" data-background="#8c4738" data-background-transition="slide">
-					<h2>Background Transition Override</h2>
-					<p>
-						You can override background transitions per slide by using <code>data-background-transition="slide"</code>.
-					</p>
-				</section>
-
-				<section>
-					<h2>Clever Quotes</h2>
-					<p>
-						These guys come in two forms, inline: <q cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						&ldquo;The nice thing about standards is that there are so many to choose from&rdquo;</q> and block:
-					</p>
-					<blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						&ldquo;For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
-						reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.&rdquo;
-					</blockquote>
-				</section>
-
-				<section>
-					<h2>Pretty Code</h2>
-					<pre><code data-trim contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
-
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) {
-        node.className += ' roll';
-      }
-    }
-  }
-}
-					</code></pre>
-					<p>Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.</p>
-				</section>
-
-				<section>
-					<h2>Intergalactic Interconnections</h2>
-					<p>
-						You can link between slides internally,
-						<a href="#/2/3">like this</a>.
-					</p>
-				</section>
-
-				<section>
-					<section id="fragments">
-						<h2>Fragmented Views</h2>
-						<p>Hit the next arrow...</p>
-						<p class="fragment">... to step through ...</p>
-						<ol>
-							<li class="fragment"><code>any type</code></li>
-							<li class="fragment"><em>of view</em></li>
-							<li class="fragment"><strong>fragments</strong></li>
-						</ol>
-
-						<aside class="notes">
-							This slide has fragments which are also stepped through in the notes window.
-						</aside>
-					</section>
-					<section>
-						<h2>Fragment Styles</h2>
-						<p>There's a few styles of fragments, like:</p>
-						<p class="fragment grow">grow</p>
-						<p class="fragment shrink">shrink</p>
-						<p class="fragment roll-in">roll-in</p>
-						<p class="fragment fade-out">fade-out</p>
-						<p class="fragment highlight-red">highlight-red</p>
-						<p class="fragment highlight-green">highlight-green</p>
-						<p class="fragment highlight-blue">highlight-blue</p>
-						<p class="fragment current-visible">current-visible</p>
-						<p class="fragment highlight-current-blue">highlight-current-blue</p>
-					</section>
-				</section>
-
-				<section>
-					<h2>Spectacular image!</h2>
-					<a class="image" href="http://lab.hakim.se/meny/" target="_blank">
-						<img width="320" height="299" src="http://s3.amazonaws.com/hakim-static/portfolio/images/meny.png" alt="Meny">
-					</a>
-				</section>
-
-				<section>
-					<h2>Export to PDF</h2>
-					<p>Presentations can be <a href="https://github.com/hakimel/reveal.js#pdf-export">exported to PDF</a>, below is an example that's been uploaded to SlideShare.</p>
-					<iframe id="slideshare" src="http://www.slideshare.net/slideshow/embed_code/13872948" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe>
-					<script>
-						document.getElementById('slideshare').attributeName = 'allowfullscreen';
-					</script>
-				</section>
-
-				<section>
-					<h2>Take a Moment</h2>
-					<p>
-						Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take distracting slides off the screen
-						during a presentation.
-					</p>
-				</section>
-
-				<section>
-					<h2>Stellar Links</h2>
-					<ul>
-						<li><a href="http://slid.es">Try the online editor</a></li>
-						<li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-						<li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
-					</ul>
-				</section>
-
-				<section>
-					<h1>THE END</h1>
-					<h3>BY Hakim El Hattab / hakim.se</h3>
-				</section>
 
 			</div>
 
